--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -26,12 +26,10 @@ layout: default
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 
   <div class="tags">
-    <h3>Tags</h3>
+    <h3>[ Tags ]</h3>
     <div>
-      {% for tag in site.tags %}
-        {% assign t = tag | first %}
-        {% assign posts = tag | last %}
-        <span>{{t | downcase | replace:" ","-" }}</span>
+      {% for tag in page.tags %}
+        <span>{{ tag }}</span>
       {% endfor %}
     </div>
   </div>
