--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -8,7 +8,12 @@ layout: default
     <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        {{ page.date | date: date_format }}
+        Published: {{ page.date | date: date_format }}
+      </time>
+      <span>/</span>
+      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="dateModified">
+        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        Last modified: {{ page.lastmod | date: date_format }}
       </time>
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
