--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -262,7 +262,7 @@
  * Posts
  */
 .tags {
-  font-size: small;
+  font-size: $small-font-size;
   font-style: italic;
-  color: gray;
+  color: $grey-color;
 }
