--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,11 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+
+  {% if page.image %}
+  <meta property="og:image" content="{{page.image}}">
+  {% else %}
+  <meta property="og:image" content="/assets/posts/default.png">
+  {% endif %}
+
 </head>
