--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ layout: default
               <a href="{{ post.link }}" target="_blank">
                 <span class="post-meta">{{ post.date | date: date_format }}</span>
                 <span class="post-icon" title="External Link">{% octicon globe height:12 %}</span>
-                <span class="post-title2">{{ post.title | escape }} ({{ post.target }})</span>
+                <span class="post-title2">{{ post.title | escape }} - published at {{ post.target }}</span>
               </a>
             {% else %}
               <a href="{{ post.url | relative_url }}">
