--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,15 @@
 
   <body>
 
+    <h1> EDITING </h1>
+
     {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
+
+        {%- include subscribe.html -%}
       </div>
     </main>
 
