--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -2,23 +2,10 @@
     <div>
         <h3>Stay Connected</h3>
     </div>
-    <div id="revue-embed">
-        <p>Subscribe via <a href="https://www.getrevue.co/profile/kenanbek" target="_blank">Revue</a>:</p>
-        <form action="https://www.getrevue.co/profile/kenanbek/add_subscriber" method="post" id="revue-form"
-            name="revue-form" target="_blank">
-            <div class="revue-form-group">
-                <label for="member_email">Email address</label>
-                <input class="revue-form-field" placeholder="Your email address..." type="email" name="member[email]"
-                    id="member_email">
-                <input type="submit" value="Subscribe" name="member[subscribe]" id="member_submit">
-            </div>
-            <div class="revue-form-footer">By subscribing, you agree with Revue’s <a target="_blank"
-                    href="https://www.getrevue.co/terms">Terms of Service</a> and <a target="_blank"
-                    href="https://www.getrevue.co/privacy">Privacy Policy</a>.</div>
-        </form>
-    </div>
-    <br />
     <div>
-        <p class="rss-subscribe">Or, subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+        <p class="rss-subscribe">
+            Subscribe at <a href="https://www.codervlogger.com/" target="_blank">Codervlogger.com</a>
+            or via <a href="{{ "/feed.xml" | relative_url }}">the RSS feed.</a>
+        </p>
     </div>
 </div>
