add Dev Kit for AI to projects list and update header links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,7 @@
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
+            <a class="page-link" href="https://devkit4ai.com/">Dev Kit</a>
             <a class="page-link" href="https://www.appbaza.com/">@AppBaza.com</a>
         </div>
       </nav>
