Add Google Search Console verification

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Google Search Console verification -->
+  <meta name="google-site-verification" content="HQYyLYGoDLz1tGz5ifajd85LY5HHHjOG0vGQ4NvNZKo" />
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   {%- feed_meta -%}
